# icicle

./: .travis.yml  CMakeLists.txt  HACKING  README  TODO  cfg.hpp.in  common.hpp.in  config.hpp.in  icicle.cpp  test.cpp
demo/: demo_1d.gpi  demo_2d.pro  demo_2d_smolar_1983.pro
doc/: Doxyfile
doc/html/: adv_8hpp.html  adv_8hpp_source.html  adv__leapfrog_8hpp.html  adv__leapfrog_8hpp_source.html  adv__mpdata_8hpp.html  adv__mpdata_8hpp_source.html  adv__upstream_8hpp.html  adv__upstream_8hpp_source.html  annotated.html  classadv-members.html  classadv.html  classadv__leapfrog-members.html  classadv__leapfrog.html  classadv__mpdata-members.html  classadv__mpdata.html  classadv__upstream-members.html  classadv__upstream.html  classdom-members.html  classdom.html  classdom__parallel-members.html  classdom__parallel.html  classdom__parallel__openmp-members.html  classdom__parallel__openmp.html  classdom__serial-members.html  classdom__serial.html  classes.html  classout-members.html  classout.html  classout__gnuplot-members.html  classout__gnuplot.html  classout__netcdf-members.html  classout__netcdf.html  dom_8hpp.html  dom_8hpp_source.html  dom__parallel_8hpp.html  dom__parallel_8hpp_source.html  dom__parallel__openmp_8hpp.html  dom__parallel__openmp_8hpp_source.html  dom__serial_8hpp.html  dom__serial_8hpp_source.html  (+20 more)
examples/: CMakeLists.txt
examples/8icmw_case1/: CMakeLists.txt  test_todo.cgi.cpp  test_todo_calc.cpp  test_todo_plot.cpp
examples/8icmw_case1_1800s_sdm_vs_2dbin/: CMakeLists.txt  bins.hpp  calc.cpp  plot.cpp
examples/8icmw_case1_chem/: CMakeLists.txt  calc_chem.cpp  plot_chem.cpp  plot_spec.cpp
examples/adv_isolines/: plot_iso.py
examples/mayavi/: test_mayavi.py  (+1 more)
examples/todo/: .htaccess  CMakeLists.txt
include/: adv.hpp  adv_leapfrog.hpp  adv_mpdata.hpp  dom.hpp  dom_parallel.hpp  dom_parallel_openmp.hpp  dom_parallel_threads.hpp  dom_serial.hpp  model.hpp  out.hpp  out_gnuplot.hpp  out_netcdf.hpp
obsolete/: CMakeLists.txt  HACKING
obsolete/examples/8icmw_case1_chem/: CMakeLists.txt  bins.hpp  calc_chem.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  a.out  adv.hpp  adv_hack.cpp  adv_lax-wendroff.hpp  adv_leapfrog.cpp  adv_leapfrog.hpp  adv_mpdata.cpp  adv_mpdata.hpp  adv_mpdata_fct.cpp  adv_mpdata_fct.hpp  adv_upstream.cpp  adv_upstream.hpp  arr.hpp  bib.hpp  cfg.hpp  cmake_install.cmake  cmn.hpp  common.hpp  config.hpp  doc.hpp  dom.hpp  dom_parallel.hpp  dom_parallel_distmem.hpp  dom_parallel_openmp.hpp  dom_parallel_threads.hpp  dom_serial.hpp  eqs.hpp  eqs_harmonic_oscillator.cpp  eqs_harmonic_oscillator.hpp  eqs_isentropic.cpp  eqs_isentropic.hpp  eqs_scalar_advection.cpp  eqs_scalar_advection.hpp  eqs_shallow_water.cpp  eqs_shallow_water.hpp  eqs_shallow_water_2d.hpp  eqs_todo.hpp  (+134 more)
src/cfg/: cfg_boost_odeint.hpp.in  cfg_cuda.hpp.in  cfg_netcdf.hpp.in  cfg_types.hpp.in
src/cmn/: cmn_error.hpp  cmn_netcdf.hpp  cmn_units.hpp
src/eqs/: eqs_harmonic_oscillator.cpp  eqs_isentropic.cpp  eqs_scalar_advection.cpp  eqs_shallow_water.cpp  eqs_shallow_water.hpp  eqs_todo_bulk.hpp  eqs_todo_bulk_ode.cpp  eqs_todo_bulk_ode.hpp  eqs_todo_mm.cpp  eqs_todo_mm.hpp  eqs_todo_sdm.cpp  eqs_todo_sdm.hpp
src/phc/: phc.hpp  phc_const_cp.hpp  phc_dissociation.hpp  phc_henry.hpp  phc_hydrostatic.hpp  phc_kappa_koehler.hpp  phc_kelvin_term.hpp  phc_maxwell-mason.hpp  phc_react.hpp  phc_theta.hpp
src/sdm/: sdm.cpp  sdm.hpp  sdm_base.hpp  sdm_cuda.cu  sdm_enums.hpp  sdm_functors.hpp  sdm_ode.hpp  sdm_ode_adve.hpp  sdm_ode_chem.hpp  sdm_ode_cond.hpp  sdm_ode_sedi.hpp  sdm_openmp.cpp
src/wkc/: wkc_chem_tmp.hpp  wkc_icmw8_case1.hpp
tests/: CMakeLists.txt  common.hpp  courant_one_1D.sh
tests/adv_anderson_fattahi_1973/: CMakeLists.txt  test_adv_anderson_fattahi_1973.cpp  test_adv_anderson_fattahi_1973.py
tests/adv_courant_one/: CMakeLists.txt  adv_courant_one_test.cpp
tests/adv_isolines/: CMakeLists.txt  isolines_1d.py  plot_iso.py  test_adv_isolines.cpp
tests/adv_smolar_1983/: CMakeLists.txt  test_adv_smolar_1983.cpp  test_adv_smolar_1983.py
tests/courant_one/: CMakeLists.txt  courant_one_1D.sh
tests/eqs_harmonic_oscillator/: CMakeLists.txt  test_harmonic_oscillator.py
tests/eqs_isentropic/: CMakeLists.txt  test_eqs_isentropic.py
tests/eqs_isentropic_halny/: CMakeLists.txt  test_eqs_isentropic_halny.cpp  test_eqs_isentropic_halny.py
tests/eqs_shallow_water/: CMakeLists.txt  test_eqs_shallow_water.cpp  test_eqs_shallow_water.py
tests/fct_limits/: CMakeLists.txt  aqq.sh  test_fct_limits.py
tests/fig_a/: CMakeLists.txt  bins.hpp  calc.cpp  common.hpp  gnuplot.hpp  hdf5.hpp  plot.cpp  plot_blk_1m.cpp  plot_blk_2m.cpp  plot_lgrngn.cpp  plot_lgrngn_spec.cpp
tests/fig_a/refdata/out_blk_1m/: coord.h5  timestep0000000000.h5  timestep0000007200.h5  timestep0000009000.h5
tests/fig_a/refdata/out_blk_2m/: coord.h5  timestep0000000000.h5  timestep0000007200.h5  timestep0000009000.h5
tests/fig_b/: CMakeLists.txt  calc.cpp  plot.gpi
tests/fig_c/: plot.cpp
tests/gnuplot/: CMakeLists.txt  test_gnuplot.cpp  test_gnuplot.gpi
tests/icmw8_case1_zerodiv/: CMakeLists.txt  icmw8_case1_zerodiv.cpp
tests/ini_func_gauss/: test_ini_func_gauss.py
tests/mayavi/: CMakeLists.txt
tests/netcdf/: CMakeLists.txt  Makefile  lst1.txt  test_netcdf.cpp
tests/out_gnuplot/: CMakeLists.txt  test_out_gnuplot.cpp  test_out_gnuplot.gpi
tests/out_netcdf/: CMakeLists.txt  test_out_netcdf.cpp
tests/phc_kappa_koehler/: CMakeLists.txt  phc_kappa_koehler_test.cpp
tests/phc_terminal_vel/: CMakeLists.txt  phc_terminal_vel_test.cpp  term_vel_test.cpp
tests/pks_wwg_1989/: test_pks_wwg_1989.gpi
tests/sdm_golovin/: CMakeLists.txt  sdm_golovin_test.cpp
tests/shallow_water/: test_shallow_water.py
tests/smolar_1983/: CMakeLists.txt  test_smolar_1983.cpp  test_smolar_1983.pro  test_smolar_1983.py
tests/table_1d/: tab1.txt  table_1d.py
tests/todo/: CMakeLists.txt  form.html  index.html  test_todo.cgi.cpp  test_todo_calc.cpp  test_todo_calc.py  test_todo_plot.cpp  test_todo_plot.py
tests/wkc_icmw8_case1_t0/: CMakeLists.txt  wkc_icmw8_case1_t0_test.cpp
(+134 files in other folders)
