add_subdirectory(out_netcdf)
add_subdirectory(out_gnuplot)
add_subdirectory(adv_anderson_fattahi_1973)
add_subdirectory(ini_func_gauss)
add_subdirectory(fct_limits)
add_subdirectory(eqs_harmonic_oscillator)
add_subdirectory(adv_isolines)
add_subdirectory(courant_one)
add_subdirectory(eqs_shallow_water)
add_subdirectory(eqs_isentropic)
add_subdirectory(eqs_isentropic_halny)
add_subdirectory(mayavi)
